# Classtop-Management-Server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  IMPROVEMENTS.md  README.md  build.sh  classtop.service  com.classtop.management-server.plist  docker-compose.mssql.yml  docker-mssql.sh  index.html  nginx-site.conf  nginx.conf  start.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  frontend.yml  release.yml
assets/: index-B4Sj9Fwj.css  index-DPdGBu-d.js  index-akGuiypd.js  index-bNMAy6Kj.css
docker/mssql/: init.sql
docs/: MSSQL_DRIVER_DEVELOPMENT.md  MSSQL_DRIVER_OVERVIEW.md  MSSQL_DRIVER_QUICKSTART.md  MSSQL_IMPLEMENTATION_APPROACHES.md  MSSQL_IMPLEMENTATION_SUMMARY.md  MSSQL_SETUP.md  MSSQL_STATUS.md  NEW_FEATURES_v1.1.md
frontend/: README.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  Main.vue  api.js  auth.js  main.js
frontend/src/components/: DashboardView.vue  LoginView.vue
frontend/src/pages/: ClientsView.vue  DataView.vue
frontend/src/router/: index.js
migrations/: 001_initial_mssql.sql  001_initial_postgresql.sql  002_initial_mssql.sql  003_add_lms_support.sql  004_add_cctv_support.sql  005_add_user_auth.sql
mssql-driver/: Cargo.toml  README.md
mssql-driver/examples/: query_test.rs  simple_connect.rs  test_connection.rs  test_query.rs
mssql-driver/src/: error.rs  lib.rs  transaction.rs  types.rs
mssql-driver/src/connection/: config.rs  mod.rs  pool.rs
mssql-driver/src/protocol/: mod.rs  packets.rs  tokens.rs
mssql-driver/src/utils/: encoding.rs  mod.rs
src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  websocket.rs
static/: index.html
tests/: integration_tests.rs
