[package]
name = "classtop-management-server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-web-actors = "4.3"
actix = "0.13"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tiberius = { version = "0.12", features = ["tokio-rustls", "chrono"] }
dotenvy = "0.15"
utoipa = { version = "5.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["actix-web"] }
utoipa-redoc = { version = "5.0", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
