[package]
name = "mssql-driver"
version = "0.1.0"
edition = "2021"
authors = ["ClassTop Team"]
description = "Pure Rust implementation of SQL Server TDS protocol driver"
license = "MIT"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
bytes = "1.8"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
encoding_rs = "0.8"

[dev-dependencies]
env_logger = "0.11"
tokio-test = "0.4"

[lib]
name = "mssql_driver"
path = "src/lib.rs"

[[example]]
name = "simple_connect"
path = "examples/simple_connect.rs"

[[example]]
name = "query_test"
path = "examples/query_test.rs"
